# SuperconductingCircuitBuilder

./: .gitignore  .yml  Cos2PhiQubit.circuit  FluxoniumDrivingTutorial_edited.ipynb  LICENSE  README.md  branch_element.py  canvas.py  canvas_element.py  circuit.py  circuitbuilder.py  connection.py  constants.py  fluxonium.yml  gui.py  node.py  pyproject.toml  smart_canvas.py
Circuits/: FluxQubit.circuit  Transmon.circuit  TunableTransmon.circuit
circuits/: Cos2Phi.circuit  FluxQubit.circuit  Fluxonium.circuit  TunableTransmon.circuit
circuits_backup/: Cos2Phi.circuit  Fluxonium.circuit  ZeroPi.circuit
demo/: scqubits_circuit_hamiltonian.ipynb  simple_circuit.circuit  simple_circuit.yml
sccircuitbuilder/: __init__.py  branch_element.py  canvas.py  canvas_element.py  circuit.py  circuitbuilder.py  connection.py  node.py
sccircuitbuilder/circuits/: Cos2PhiQubit.circuit  FluxQubit.circuit  Fluxonium.circuit  Transmon.circuit  TunableTransmon.circuit  ZeroPi.circuit
src/SuperConductingCircuitBuilder/: caretaker.py
src/SuperConductingCircuitBuilder/circuits/: Transmon.circuit
src/SuperConductingCircuitBuilder/demo/: simple_circuit.circuit  simple_circuit.yml
src/SuperconductingCircuitBuilder/: canvas.py  circuit.py  connection.py  node.py
src/SuperconductingCircuitBuilder/circuits/: ZeroPi.circuit
