[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sccircuitbuilder"
version = "0.0.3"
dependencies = ["numpy", "pyside6"]
keywords = [
  "quantum",
  "quantum computing",
  "superconducting circuits",
  "circuit QED",
  "cQED",
]
authors = [
  { name="Ben McDonough", email="ben.mcdonough@yale.edu" },
]
description = "A graphical user interface to create superconducting circuits intended to accompany scQubits"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/benmcdonough20/SuperconductingCircuitBuilder"
Tracker = "https://github.com/benmcdonough20/SuperconductingCircuitBuilder/issues"

[tool]
